--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProductList"
         tools:targetApi="31">
-        <activity
-            android:name=".presentation.MainActivity"
+        <activity android:name=".presentation.shop_item_activity.ShopItemActivity"
+            android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".presentation.main_activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
